Fix input font size to prevent zoom on iOS

--- a/_scss/components/_input.scss
+++ b/_scss/components/_input.scss
@@ -15,7 +15,7 @@ $input-theme: $color-palette-primary;
   padding: 0.75rem 0.75rem;
 
   color: $color-text-primary;
-  font-size: 1rem;
+  font-size: 16px;
   font-family: inherit;
 
   border: 1px solid $color-ui-details;
